# st-mui-multiselect

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_app.py  pyproject.toml
my_component/: __init__.py
my_component/frontend/: package-lock.json  package.json
my_component/frontend/src/: MyComponent.tsx
st_mui_multiselect/: __init__.py
st_mui_multiselect/frontend/: package-lock.json  package.json
st_mui_multiselect/frontend/src/: StMuiMultiselect.tsx  index.tsx
