[tool.poetry]
name = "st-mui-multiselect"
version = "0.1.0"
description = ""
authors = ["Nathan Lloyd <nat272@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.13,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
